force-app/main/default/objects/sugati__Exchange_Rate__c/sugati__Exchange_Rate__c.object-meta.xml
<CustomObject>
    <label>Exchange Rate</label>
    <nameField>
        <displayFormat>ER-{00000000}</displayFormat>
        <label>Exchange Rate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>