force-app/main/default/objects/sugati__Exchange_Rate__c/fields/sugati__ER_Book_From__c.field-meta.xml
<CustomField>
    <fullName>sugati__ER_Book_From__c</fullName>
    <description>Booking Date From</description>
    <inlineHelpText>Booking Date From</inlineHelpText>
    <label>Book From</label>
    <type>Date</type>
</CustomField>