force-app/main/default/objects/sugati__Exchange_Rate__c/fields/sugati__ER_Book_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__ER_Book_To__c</fullName>
    <label>Book To</label>
    <type>Date</type>
</CustomField>