force-app/main/default/objects/sugati__Exchange_Rate__c/fields/sugati__ER_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__ER_Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>