force-app/main/default/objects/sugati__Exchange_Rate__c/fields/sugati__ER_Protection_Percentage__c.field-meta.xml
<CustomField>
    <fullName>sugati__ER_Protection_Percentage__c</fullName>
    <label>Protection %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>