force-app/main/default/objects/sugati__Exchange_Rate__c/fields/sugati__ER_Sales_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__ER_Sales_Currency__c</fullName>
    <inlineHelpText>This is what the end customers will be paying in.</inlineHelpText>
    <label>Booking Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>