force-app/main/default/objects/sugati__Exchange_Rate__c/fields/sugati__ER_XE_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__ER_XE_Rate__c</fullName>
    <label>XE Rate</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>