force-app/main/default/objects/sugati__Exchange_Rate__c/recordTypes/sugati__Buy.recordType-meta.xml
<RecordType>
    <fullName>sugati__Buy</fullName>
    <active>false</active>
    <label>Buy</label>
</RecordType>