force-app/main/default/objects/sugati__Exchange_Rate__c/recordTypes/sugati__Sell.recordType-meta.xml
<RecordType>
    <fullName>sugati__Sell</fullName>
    <active>true</active>
    <label>Sell</label>
</RecordType>