force-app/main/default/objects/sugati__Exchange_Rate__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__ER_Book_From__c</columns>
    <columns>sugati__ER_Book_To__c</columns>
    <columns>sugati__ER_Travel_From__c</columns>
    <columns>sugati__ER_Travel_To__c</columns>
    <columns>sugati__ER_Exchange_Rate__c</columns>
    <columns>sugati__ER_Sales_Currency__c</columns>
    <columns>sugati__ER_Base_Currency__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>