force-app/main/default/objects/sugati__Exchange_Rate__c/listViews/sugati__Base_Currency_GBP.listView-meta.xml
<ListView>
    <fullName>sugati__Base_Currency_GBP</fullName>
    <columns>NAME</columns>
    <columns>sugati__ER_Book_From__c</columns>
    <columns>sugati__ER_Book_To__c</columns>
    <columns>sugati__ER_Travel_From__c</columns>
    <columns>sugati__ER_Travel_To__c</columns>
    <columns>sugati__ER_Exchange_Rate__c</columns>
    <columns>sugati__ER_Sales_Currency__c</columns>
    <columns>sugati__ER_Base_Currency__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sugati__ER_Sales_Currency__c</field>
        <operation>equals</operation>
        <value>GBP</value>
    </filters>
    <label>Base Currency = GBP</label>
</ListView>